Added a program to train multiplication.

--- a/ArithmeticTrainer/ArithmeticTrainer.csproj
+++ b/ArithmeticTrainer/ArithmeticTrainer.csproj
@@ -46,6 +46,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ArithmeticTrainer.Lib\ArithmeticTrainer.Lib.csproj">
+      <Project>{CEB9D400-48D8-4073-9AC3-2C9B665DBB41}</Project>
+      <Name>ArithmeticTrainer.Lib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
